tests/NormalTests/paczka1/small_fuzzy/49250584.err
Error in line 7: oM0UDG26 A669 -2,0
Error in line 6: pxUsBF S77 44,7
Error in line 10: pxUsBF A360 34,0
